# commandopt

./: CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml  ruff.toml  setup.cfg  setup.py  tox.ini
.claude/: settings.json
.github/workflows/: ci.yml  release.yml
commandopt/: __init__.py  exceptions.py
tests/: conftest.py  test_api_surface.py  test_commandopt.py  test_docopt_integration.py  test_edge_cases.py  test_packaging.py  test_registry.py
